AUSM flux for 3D - not working

--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -3,7 +3,7 @@ equations = Euler
 depth_approx = shallow
 
 [System]
-device = cuda
+; device = cuda
 
 [Grid]
 grid_type = cubed_sphere
@@ -21,11 +21,11 @@ case_number = 31
 [Time_integration]
 
 # Time step
-dt = 30
+dt = 14.5
 
 # End time of the simulation in sec
 #t_end = 0
-t_end = 30
+t_end = 3600
 #t_end = 36000
 #t_end = 450000
 
