--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -21,7 +21,7 @@ case_number = 31
 [Time_integration]
 
 # Time step
-dt = 14.5
+dt = 0.5
 
 # End time of the simulation in sec
 #t_end = 0
@@ -30,10 +30,10 @@ t_end = 3600
 #t_end = 450000
 
 # Time integration scheme
-time_integrator = epi2
+time_integrator = tvdrk3
 
 # Solver tolerance
-tolerance = 1e-7
+tolerance = 1e-10
 
 verbose_solver = 1
 gmres_restart = 200
@@ -61,8 +61,8 @@ verbose_precond = 0
 nbsolpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 12
-nb_elements_vertical = 3
+nb_elements_horizontal = 15
+nb_elements_vertical = 5
 
 #filter_apply = 1
 #filter_order  = 2
