Change greek letter in config

--- a/config/case6.ini
+++ b/config/case6.ini
@@ -6,10 +6,10 @@ equations = shallow_water
 
 # Possible values: cubed_sphere, cartesian2d
 grid_type = cubed_sphere
-λ0 = 0.0
+lambda0 = 0.0
 #ϕ0 = 0.0
-ϕ0 = 0.7853981633974483
-α0 = 0.0
+phi0 = 0.7853981633974483
+alpha0 = 0.0
 
 [Test_case]
 
