--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -7,10 +7,10 @@ desired_device = cuda
 
 [Grid]
 grid_type = cubed_sphere
-λ0 = 0.0
-ϕ0 = 0.0
+lambda0 = 0.0
+phi0 = 0.0
 #ϕ0 = 0.7853981633974483
-α0 = 0.0
+alpha0 = 0.0
 
 ztop = 10000.0
 
