--- a/config/unsteady_zonal.ini
+++ b/config/unsteady_zonal.ini
@@ -4,10 +4,10 @@ equations = shallow_water
 
 [Grid]
 grid_type = cubed_sphere
-λ0 = 0.0
-ϕ0 = 0.0
+lambda0 = 0.0
+phi0 = 0.0
 #ϕ0 = 0.7853981633974483
-α0 = 0.0
+alpha0 = 0.0
 
 [Test_case]
 
