--- a/config/dcmip12.ini
+++ b/config/dcmip12.ini
@@ -3,10 +3,10 @@ equations = Euler
 
 [Grid]
 grid_type = cubed_sphere
-λ0 = 0.0
-ϕ0 = 0.0
+lambda = 0.0
+phi0 = 0.0
 #ϕ0 = 0.7853981633974483
-α0 = 0.0
+alpha0 = 0.0
 
 ztop = 12000.0
 
