--- a/config/dcmip31_cuda.ini
+++ b/config/dcmip31_cuda.ini
@@ -8,10 +8,10 @@ cuda_devices = [0, 1, 2]
 
 [Grid]
 grid_type = cubed_sphere
-λ0 = 0.0
-ϕ0 = 0.0
+lamda0 = 0.0
+phi0 = 0.0
 #ϕ0 = 0.7853981633974483
-α0 = 0.0
+alpha0 = 0.0
 
 ztop = 10000.0
 
