--- a/config/vortex.ini
+++ b/config/vortex.ini
@@ -3,10 +3,10 @@
 equations = shallow_water
 
 [Grid]
-λ0 = 0.0
+lambda0 = 0.0
 #ϕ0 = 0.0
-ϕ0 = 0.7853981633974483
-α0 = 0.0
+phi0 = 0.7853981633974483
+alpha0 = 0.0
 
 [Test_case]
 
