Renamed nbsolpts to num_solpts

--- a/config/dcmip21_rk3.ini
+++ b/config/dcmip21_rk3.ini
@@ -37,8 +37,8 @@ tolerance = 1e-7
 
 [Spatial_discretization]
 
-# The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 5
+# The grid will have (num_solpts) x (num_solpts) nodal points in each elements.
+num_solpts = 5
 
 # Number of element in x^1, x^2 and x^3 directions
 # 1.5 degree horizontal spacing: 20*3*4 = 120
