--- a/config/dcmip20.ini
+++ b/config/dcmip20.ini
@@ -32,8 +32,8 @@ tolerance = 1e-12
 
 [Spatial_discretization]
 
-# The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 5
+# The grid will have (num_solpts) x (num_solpts) nodal points in each elements.
+num_solpts = 5
 
 # Number of element in x^1, x^2 and x^3 directions
 # 1 degree horizontal spacing: 32*4*3 = 360 (DCMIP spec)
