--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -3,7 +3,7 @@ equations = Euler
 depth_approx = shallow
 
 [System]
-desired_device = cuda
+; desired_device = cuda
 
 [Grid]
 grid_type = cubed_sphere
@@ -57,8 +57,8 @@ verbose_precond = 0
 
 [Spatial_discretization]
 
-# The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 3
+# The grid will have (num_solpts) x (num_solpts) nodal points in each elements.
+num_solpts = 2
 
 # Number of element in x^1, x^2 and x^3 directions
 nb_elements_horizontal = 12
