--- a/config/dcmip31_cuda.ini
+++ b/config/dcmip31_cuda.ini
@@ -56,8 +56,8 @@ verbose_precond = 0
 
 [Spatial_discretization]
 
-# The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 3
+# The grid will have (num_solpts) x (num_solpts) nodal points in each elements.
+num_solpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
 nb_elements_horizontal = 24
