--- a/config/density_current.ini
+++ b/config/density_current.ini
@@ -67,8 +67,8 @@ precond_filter_apply = 0
 
 [Spatial_discretization]
 
-# The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 5
+# The grid will have (num_solpts) x (num_solpts) nodal points in each elements.
+num_solpts = 5
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
