--- a/config/vortex.ini
+++ b/config/vortex.ini
@@ -40,8 +40,8 @@ tolerance = 1e-7
 
 [Spatial_discretization]
 
-# The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 3
+# The grid will have (num_solpts) x (num_solpts) nodal points in each elements.
+num_solpts = 3
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
