--- a/config/cold_bubble_low.ini
+++ b/config/cold_bubble_low.ini
@@ -70,8 +70,8 @@ num_solpts = 5
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 10
-nb_elements_vertical   = 10
+num_elements_horizontal = 10
+num_elements_vertical   = 10
 
 [Output_options]
 
