--- a/config/dcmip12.ini
+++ b/config/dcmip12.ini
@@ -48,8 +48,8 @@ tolerance = 1e-7
 num_solpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 12
-nb_elements_vertical = 10
+num_elements_horizontal = 12
+num_elements_vertical = 10
 
 [Output_options]
 
