--- a/config/dcmip20.ini
+++ b/config/dcmip20.ini
@@ -37,11 +37,11 @@ num_solpts = 5
 
 # Number of element in x^1, x^2 and x^3 directions
 # 1 degree horizontal spacing: 32*4*3 = 360 (DCMIP spec)
-nb_elements_horizontal = 20 
+num_elements_horizontal = 20 
 # 15 vertical levels (DCMIP spec, version 1)
-nb_elements_vertical = 5 
+num_elements_vertical = 5 
 # 30 vertical levels (DCMIP spec, version 2)
-#nb_elements_vertical = 10 
+#num_elements_vertical = 10 
 
 [Output_options]
 
