--- a/config/dcmip21.ini
+++ b/config/dcmip21.ini
@@ -43,9 +43,9 @@ num_solpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
 # 1.5 degree horizontal spacing: 20*3*4 = 120
-nb_elements_horizontal = 3
+num_elements_horizontal = 3
 # 60 vertical levels, ≈ 300m spacing
-nb_elements_vertical = 4
+num_elements_vertical = 4
 
 #filter_apply = 1
 #filter_order  = 2
