--- a/config/dcmip21_rk3.ini
+++ b/config/dcmip21_rk3.ini
@@ -42,9 +42,9 @@ num_solpts = 5
 
 # Number of element in x^1, x^2 and x^3 directions
 # 1.5 degree horizontal spacing: 20*3*4 = 120
-nb_elements_horizontal = 12
+num_elements_horizontal = 12
 # 60 vertical levels, ≈ 300m spacing
-nb_elements_vertical = 12 
+num_elements_vertical = 12 
 
 #filter_apply = 1
 #filter_order  = 2
