--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -61,8 +61,8 @@ verbose_precond = 0
 num_solpts = 2
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 12
-nb_elements_vertical = 3
+num_elements_horizontal = 12
+num_elements_vertical = 3
 
 #filter_apply = 1
 #filter_order  = 2
