--- a/config/dcmip31_cuda.ini
+++ b/config/dcmip31_cuda.ini
@@ -60,8 +60,8 @@ verbose_precond = 0
 num_solpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 24
-nb_elements_vertical = 3
+num_elements_horizontal = 24
+num_elements_vertical = 3
 
 #filter_apply = 1
 #filter_order  = 2
