--- a/config/density_current.ini
+++ b/config/density_current.ini
@@ -72,8 +72,8 @@ num_solpts = 5
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 50
-nb_elements_vertical   = 10
+num_elements_horizontal = 50
+num_elements_vertical   = 10
 
 # Weak filter
 filter_apply = 0
