--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -80,8 +80,8 @@ num_solpts = 5
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 9
-nb_elements_vertical   = 15
+num_elements_horizontal = 9
+num_elements_vertical   = 15
 
 # Weak filter
 filter_apply = 0
