--- a/config/gaussian_bubble_cuda.ini
+++ b/config/gaussian_bubble_cuda.ini
@@ -82,8 +82,8 @@ num_solpts = 5
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 32
-nb_elements_vertical   = 48
+num_elements_horizontal = 32
+num_elements_vertical   = 48
 
 # Weak filter
 filter_apply = 0
