--- a/config/gaussian_bubble_hybrid.ini
+++ b/config/gaussian_bubble_hybrid.ini
@@ -56,8 +56,8 @@ num_solpts = 5
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 19
-nb_elements_vertical   = 30
+num_elements_horizontal = 19
+num_elements_vertical   = 30
 
 # Weak filter
 filter_apply = 1
