--- a/config/pill_bubble.ini
+++ b/config/pill_bubble.ini
@@ -56,8 +56,8 @@ num_solpts = 5
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 20
-nb_elements_vertical   = 20
+num_elements_horizontal = 20
+num_elements_vertical   = 20
 
 # DG filter
 filter_apply = 0
