--- a/config/unsteady_zonal.ini
+++ b/config/unsteady_zonal.ini
@@ -48,7 +48,7 @@ num_solpts = 3
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 10
+num_elements_horizontal = 10
 
 [Output_options]
 
