--- a/config/eulerVortex.ini
+++ b/config/eulerVortex.ini
@@ -19,10 +19,10 @@ case_number = 555
 
 [Time_integration]
 # Time step
-dt = 0.1
+dt = 0.5
 
 # End time of the simulation in sec
-t_end = 20
+t_end = 10
 
 # Time integration scheme
 # Possible values  = 'epi2', 'epi3', 'epi4', 'epi5', 'epi6'  = multistep exponential propagation iterative
@@ -72,12 +72,12 @@ verbose_precond = 0
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 4
+nbsolpts = 3
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 20
-nb_elements_vertical   = 20
+nb_elements_horizontal = 10
+nb_elements_vertical   = 10
 
 # Weak filter
 filter_apply = 0
@@ -101,4 +101,4 @@ store_solver_stats = 0
 output_dir = results
 
 # Output filename
-base_output_file = thirdOrder
+base_output_file = check_this_result
