Create Simulation from a Configuration
- No need to manually load a Schema
- Can also just pass a config file name

--- a/.pylintrc
+++ b/.pylintrc
@@ -63,7 +63,7 @@ ignored-modules=mpi4py
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-#init-hook=
+init-hook='import sys; sys.path.append("wx_factory")'
 
 # Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
 # number of processors available to use, and will cap the count on Windows to
