Created subclass for NetCDF output

--- a/config/config-format.json
+++ b/config/config-format.json
@@ -511,6 +511,13 @@
                     "type": "bool",
                     "default": false,
                     "description": "Whether to output total runtime in seconds to a file"
+                },
+                {
+                    "name": "output_format",
+                    "type": "str",
+                    "default": "netcdf",
+                    "selectable": ["netcdf"],
+                    "description": "Desired format to use for storing simulation results."
                 }
             ]
         }
