Fixed error in exponential integrator selection

--- a/config/config-format.json
+++ b/config/config-format.json
@@ -108,8 +108,8 @@
                     "name": "exponential_solver",
                     "type": "str",
                     "default": "pmex",
-                    "selectables": ["pmex", "kiops", "exode", "cwy_1s", "cwy_ne", "cwy_ne1s", "dcgs2", "icwy_1s",
-                                    "icwy_neiop", "icwy_ne", "icwy_ne1s", "kiops_ne", "pmex_1s", "pmex_ne1s"]
+                    "selectables": ["pmex", "kiops", "exode", "pmex_ne", "cwy_1s", "cwy_ne", "cwy_ne1s", "dcgs2",
+                                    "icwy_1s", "icwy_neiop", "icwy_ne", "icwy_ne1s", "kiops_ne", "pmex_1s", "pmex_ne1s"]
                 },
                 {
                     "name": "exode_method",
