--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -26,7 +26,7 @@ bubble_rad = 250.
 dt = 5
 
 # End time of the simulation in sec
-t_end = 100
+t_end = 700
 
 # Time integration scheme
 # Possible values  = 'epi2', 'epi3', 'epi4', 'epi5', 'epi6'  = multistep exponential propagation iterative
@@ -41,7 +41,7 @@ t_end = 100
 #                    'partrosexp2' = Implicit-Exponential hybrid scheme (implicit first)
 #                    'crank_nicolson' = 2nd order implicit scheme
 #                    'bdf2' = 2nd order implicit multistep
-time_integrator = epi2
+time_integrator = epi_stiff5
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
@@ -80,8 +80,8 @@ nbsolpts = 3
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 3
-nb_elements_vertical   = 3
+nb_elements_horizontal = 20
+nb_elements_vertical   = 20
 
 # Weak filter
 filter_apply = 0
