--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ doc/**/*-eps-converted-to.pdf
 doc/**/*.eps
 doc/**/build
 doc/sphinx/source/_autosummary
-doc/sphinx/**/*.md
+# doc/sphinx/**/*.md
 
 scripts/**/*.pdf
 
