--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -23,10 +23,10 @@ bubble_rad = 250.
 
 [Time_integration]
 # Time step
-dt = 4
+dt = 0.01
 
 # End time of the simulation in sec
-t_end = 700
+t_end = 300
 
 # Time integration scheme
 # Possible values  = 'epi2', 'epi3', 'epi4', 'epi5', 'epi6'  = multistep exponential propagation iterative
@@ -41,7 +41,7 @@ t_end = 700
 #                    'partrosexp2' = Implicit-Exponential hybrid scheme (implicit first)
 #                    'crank_nicolson' = 2nd order implicit scheme
 #                    'bdf2' = 2nd order implicit multistep
-time_integrator = epi_stiff5
+time_integrator = ros2
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
@@ -49,7 +49,7 @@ krylov_size = 10
 # Solver tolerance
 tolerance = 1e-12
 
-jacobian_method = complex
+; jacobian_method = complex
 
 # If you want to start at an arbitrary timestep (assuming its state vector is already saved in a file)
 starting_step = 0
@@ -80,8 +80,8 @@ nbsolpts = 3
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 20
-nb_elements_vertical   = 20
+nb_elements_horizontal = 15
+nb_elements_vertical   = 10
 
 # Weak filter
 filter_apply = 0
@@ -97,9 +97,9 @@ stat_freq = 1
 output_freq = 1
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
-save_state_freq = 24
+save_state_freq = 0
 
 # Store statistics about the solver (iterations, residuals, etc.). 0 to disable.
-store_solver_stats = 1
+store_solver_stats = 0
 
 output_dir = results
