--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,6 @@
 *.nsys-rep
 *.so
 
-pde/pde_interface.cpp
-
 doc/*.pdf
 doc/aux/*
 doc/svg-inkscape/*
@@ -24,12 +22,12 @@ scripts/**/*.pdf
 __pycache__/
 *.py[cod]
 
-bubble_cliff
+/*.pdf
 jacobian
 listings
 results
-results_tanya
 work
+tests/**/tmp
 
 scripts/load_env.sh
 
