--- a/config/dcmip21.ini
+++ b/config/dcmip21.ini
@@ -21,34 +21,34 @@ case_number = 21
 [Time_integration]
 
 # Time step
-dt = 25
+dt = 0.6
 
 # End time of the simulation in sec
 # per DCMIP spec, equivalent to 1000 hours in scaled units
-t_end = 7200 
+t_end = 6480
 
 # Time integration scheme
 time_integrator = epi_stiff5
 exponential_solver = pmex
 
 # Solver tolerance
-tolerance = 1e-7
+tolerance = 1e-8
 
 # If you want to start at an arbitrary timestep (assuming its state vector is already saved in a file)
-starting_step = 200
+starting_step = 0
 
 
 
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 5
+nbsolpts = 4
 
 # Number of element in x^1, x^2 and x^3 directions
 # 1.5 degree horizontal spacing: 20*3*4 = 120
-nb_elements_horizontal = 12
+nb_elements_horizontal = 20
 # 60 vertical levels, ≈ 300m spacing
-nb_elements_vertical = 12 
+nb_elements_vertical = 15
 
 #filter_apply = 1
 #filter_order  = 2
@@ -66,14 +66,14 @@ expfilter_strength = 1e-1
 stat_freq = 0
 
 # Output solution every "output_freq" steps, 0 to disable.
-output_freq = 1
+output_freq = 200
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
-save_state_freq = 50
+save_state_freq = 10800
 
 # Output filename
-base_output_file = out_sec_3
+base_output_file = output_20_1
 
 # Output and input directory
-output_dir = /home/shp000/raid/ppp5/paper2024/gef/results/test_dcmip21
+; output_dir = /home/shp000/raid/ppp5/paper2024/gef/results/test_dcmip21
 
