cupy performance improvements + other:
- Fused operations (forcing, start_comm)
- More backends CPU -> cpp/numpy, GPU -> cuda/cupy
- Added option to merge several start of communications, to have only 1 synchronization
- Fixed stats DB creation when multiple simulations start at once

--- a/config/config-format.json
+++ b/config/config-format.json
@@ -27,8 +27,8 @@
                 {
                     "name": "desired_device",
                     "type": "str",
-                    "selectables": ["cpu", "cuda"],
-                    "default": "cpu",
+                    "selectables": ["cpp", "cuda", "cupy", "numpy"],
+                    "default": "cpp",
                     "description": "Physical backend to run the computation on"
                 },
                 {
@@ -37,7 +37,7 @@
                     "default": [],
                     "dependency": {
                         "name": "desired_device",
-                        "values": ["cuda"]
+                        "values": ["cuda", "cupy"]
                     },
                     "description": "List of Nvidia physical device to use"
                 }
