--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -3,13 +3,13 @@ equations = Euler
 depth_approx = shallow
 
 [System]
-; desired_device = cuda
+desired_device = cuda
 
 [Grid]
 grid_type = cubed_sphere
 lambda0 = 0.0
 phi0 = 0.0
-#ϕ0 = 0.7853981633974483
+#ϕ1 = 0.7853981633974483
 alpha0 = 0.0
 
 ztop = 10000.0
@@ -58,11 +58,11 @@ verbose_precond = 0
 [Spatial_discretization]
 
 # The grid will have (num_solpts) x (num_solpts) nodal points in each elements.
-num_solpts = 2
+num_solpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
-num_elements_horizontal = 12
-num_elements_vertical = 3
+num_elements_horizontal = 10
+num_elements_vertical = 6
 
 #filter_apply = 1
 #filter_order  = 2
