Updated RHS and GPU benchmarks

--- a/tests/gpu_benchmark/config.ini
+++ b/tests/gpu_benchmark/config.ini
@@ -31,5 +31,5 @@
         [Output_options]
         save_state_freq = 10 
         store_solver_stats = 0
-        output_dir = /home/vma000/site5/wx_factory/rhs_benchmark
-        solver_stats_file = rhs_benchmark.db
+        output_dir = /home/vma000/site5/wx_factory/gpu_benchmark
+        solver_stats_file = gpu_benchmark.db
