Implemented operators with OpenMP offload
- Added "omp" to desired_device config option
- Proof of concept, not super performant

--- a/config/config-format.json
+++ b/config/config-format.json
@@ -27,7 +27,7 @@
                 {
                     "name": "desired_device",
                     "type": "str",
-                    "selectables": ["cpp", "cuda", "cupy", "numpy"],
+                    "selectables": ["cpp", "cuda", "cupy", "numpy", "omp"],
                     "default": "cpp",
                     "description": "Physical backend to run the computation on"
                 },
