Add schar mountains postprocessors to test case

--- a/config/dcmip21.ini
+++ b/config/dcmip21.ini
@@ -69,3 +69,13 @@ output_freq = 1
 
 # Output filename
 base_output_file = dcmip_21
+
+
+[Post_processing]
+enable_schar_waves = 1
+schar_waves_longitude = 0.7853981633974483
+schar_waves_lattitude = 0
+schar_waves_height = 250
+schar_waves_radius = 5000
+schar_waves_length = 4000
+schar_waves_step = 0
