--- a/config/dcmip21_rk3.ini
+++ b/config/dcmip21_rk3.ini
@@ -68,3 +68,13 @@ output_freq = 800
 
 # Output filename
 base_output_file = dcmip_21_rk3
+
+
+[Post_processing]
+enable_schar_waves = 1
+schar_waves_longitude = 0.7853981633974483
+schar_waves_lattitude = 0
+schar_waves_height = 250
+schar_waves_radius = 5000
+schar_waves_length = 4000
+schar_waves_step = 0
