--- a/config/dcmip21.ini
+++ b/config/dcmip21.ini
@@ -73,7 +73,7 @@ base_output_file = dcmip_21
 
 [Post_processing]
 enable_schar_mountain = 1
-schar_mountain_longitude = 0.7853981633974483
+schar_mountain_longitude = pi / 4
 schar_mountain_lattitude = 0
 schar_mountain_height = 250
 schar_mountain_radius = 5000
