--- a/config/dcmip21_rk3.ini
+++ b/config/dcmip21_rk3.ini
@@ -72,7 +72,7 @@ base_output_file = dcmip_21_rk3
 
 [Post_processing]
 enable_schar_mountain = 1
-schar_mountain_longitude = 0.7853981633974483
+schar_mountain_longitude = pi / 4
 schar_mountain_lattitude = 0
 schar_mountain_height = 250
 schar_mountain_radius = 5000
